tests/ui/lint/snapshots/lost_query_mutation_add.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ Lost query mutation
   ╭─[test.lis:6:3]
 5 │   let Ok(u) = url.Parse("http://example.com?a=1") else { return }
 6 │   u.Query().Add("b", "2")
   ·   ───────────┬───────────
   ·              ╰── mutates a discarded copy
 7 │ }
   ╰────
  help: `URL.Query` returns a fresh copy, so this `Add` has no effect. Bind it, mutate it, then assign `values.Encode()` to `RawQuery` · code: [lint.lost_query_mutation]
