tests/ui/lint/snapshots/manual_bytes_equal_aliased_import.snap
---
source: tests/ui/lint/mod.rs
---
  ● Manual `bytes.Equal`
   ╭─[test.lis:7:11]
 6 │   let b = "world" as Slice<byte>
 7 │   let _ = mybytes.Compare(a, b) == 0
   ·           ─────────────┬────────────
   ·                        ╰── can use `bytes.Equal`
 8 │ }
   ╰────
  help: Use `mybytes.Equal(a, b)` to compare byte slices directly · code: [lint.manual_bytes_equal]
